# yamata-no-orochi

./: .editorconfig  .gitignore  Cargo.toml  LICENSE-MIT  README.md  astro.config.ts  index.html  package.json
.astro/: data-store.json  settings.json
.github/workflows/: build.yml  lint.yml
assets/locales/: en.json  pt.json
assets/migrations/: 06042025_221000_users.sql  23012025-035710_users.sql  23012025_035710_users.sql  28012025_170720_groups.sql
src/: config.rs  main.rs  utils.rs
src/layouts/: MainLayout.astro
src/middlewares/: authenticate_anilist.rs  mod.rs  update_chat_lang.rs
src/models/: group.rs  mod.rs  user.rs
src/pages/: auth.astro  index.astro
src/plugins/: anime.rs  auth.rs  character.rs  inline.rs  language.rs  manga.rs  mod.rs  ping.rs  start.rs  user.rs
src/resources/: anilist.rs  cache.rs  database.rs  i18n.rs  mod.rs
src/styles/: global.css
