[package]
name = "yamata-no-orochi"
version = "0.1.0"
authors = ["Andriel Ferreira <andrielfr@proton.me>"]
license = "MIT or Apache-2.0"
description = """
A Telegram bot that uses the AniList API to search for anime and manga.
"""
homepage = "https://github.com/AmanoTeam/yamata-no-orochi"
repository = "https://github.com/AmanoTeam/yamata-no-orochi"
keywords = ["telegram", "bot", "anilist", "anime", "manga"]
edition = "2021"

[profile.release]
strip = true
opt-level = "z"
lto = true

[dependencies]
# ferogram = { git = "https://github.com/AmanoTeam/ferogram.git" }
ferogram = { path = "../ferogram/lib/ferogram" }
grammers-client = { git = "https://github.com/Lonami/grammers.git", features = ["html", "serde"] }

rust-anilist = { git = "https://github.com/AmanoTeam/rust-anilist.git" }

log = "^0.4"
rand = "^0.9"
toml = "^0.8"
sqlx = { version = "^0.8", features = ["chrono", "derive", "postgres", "runtime-tokio-native-tls"] }
tokio = { version = "^1.43", features = ["macros", "rt"] }
serde = { version = "^1.0", features = ["derive"] }
chrono = "^0.4"
maplit = "^1.0"
tiny-orm = { version = "^0.5", features = ["postgres"] }
env_logger = "^0.11"
serde_json = "^1.0"
async-trait = "^0.1"
tokio-uring = "^0.5"
chrono-humanize = "^0.2"
